--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ section {
     margin-bottom: 20px;
     padding: 10px;
     background-color: #fff;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 5px rgb(0, 0, 0);
 }
 
 /* Style the social media links */
